--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./images:/usr/share/nginx/html/images
       - ./index.html:/usr/share/nginx/html/index.html
-      - ./styles.css:/usr/share/nginx/html/styles.css
+      - .:/usr/share/nginx/html/styles.css
     networks:
       - webnet
     container_name: kubelife_web_app
